--- a/GstSharpBundle.csproj
+++ b/GstSharpBundle.csproj
@@ -1,8 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+    <!-- Proje yapısı hakkında güzel bir referans:-->
+    <!-- https://github.com/ppy/SDL2-CS/blob/master/SDL2-CS.csproj-->
+    
     <PropertyGroup>
         <PackageId>GstSharpBundle</PackageId>
-        <Version>1.24.3-preview2</Version>
+        <Version>1.24.3-preview3</Version>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -11,6 +14,8 @@
         <Nullable>disable</Nullable>
         <LangVersion>12</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>    
     </PropertyGroup>
 
     <PropertyGroup>
