--- a/GstSharpBundle.csproj
+++ b/GstSharpBundle.csproj
@@ -25,14 +25,14 @@
     <ItemGroup>
         <Content Include="$(MSBuildThisFileDirectory)gstreamer/win-x64/**">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-            <PackagePath>runtimes/win-x64/native/gstreamer</PackagePath>
-            <Pack>true</Pack>
+<!--            <PackagePath>runtimes/win-x64/native/gstreamer</PackagePath>-->
+<!--            <Pack>true</Pack>-->
         </Content>
-        <Content Include="$(MSBuildThisFileDirectory)gstreamer/win-x86/**">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-            <PackagePath>runtimes/win-x86/native/gstreamer</PackagePath>
-            <Pack>true</Pack>
-        </Content>
+<!--        <Content Include="$(MSBuildThisFileDirectory)gstreamer/win-x86/**">-->
+<!--            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>-->
+<!--            <PackagePath>runtimes/win-x86/native/gstreamer</PackagePath>-->
+<!--            <Pack>true</Pack>-->
+<!--        </Content>-->
     </ItemGroup>
     
 </Project>
